--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,8 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "both": "concurrently \"npm run server\" \"npm run client\" ",
-    "build": "npm run build:client",
-    "build:client": "npm run build --prefix client",
-    "build:server": "babel server -d dist"
+    "build": "npm run build --prefix client"
+    
   },
   "author": "CHNK",
   "license": "ISC",
