--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
-    "client": "npm start --prefix client",
+    "client": "cd client && npm start --prefix client",
     "both": "concurrently \"npm run server\" \"npm run client\" ",
     "build": "npm run build --prefix client"
     
