--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "cd client && npm start --prefix client",
-    "both": "concurrently \"npm run server\" \"npm run client\" ",
-    "build": "npm run build --prefix client"
+    "both": "concurrently \"npm run server\" \"npm run client\" "
+    
     
   },
   "author": "CHNK",
