--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "both": "concurrently \"npm run server\" \"npm run client\" "
+    "both": "concurrently \"npm run server\" \"npm run client\" ",
+    "dev": "webpack --config=Scripts/config/webpack.dev.js --watch",
+    "build": "webpack --config=Scripts/config/webpack.prod.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
