--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "debug": "^4.3.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "webpack": "^5.91.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "webpack-cli": "^5.1.4"
   }
 }
