--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "devusermodel.js",
   "scripts": {
     "start": "node server",
+    "build" : "vite build",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "both": "concurrently \"npm run server\" \"npm run client\" "
@@ -23,6 +24,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
+    "vite": "^5.2.13",
     "webpack-cli": "^5.1.4"
   }
 }
