--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server",
     "dev": "vite",
-    "build" : "vite build",
+    "build" : "react-scripts build",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "both": "concurrently \"npm run server\" \"npm run client\" "
